# Tikorgzo

./: README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/tikorgzo/: __init__.py  __main__.py  app.py  app_functions.py  args_handler.py  constants.py  exceptions.py  generic.py  main.py  utils.py
src/tikorgzo/cli/: args_handler.py  args_validator.py  workflow.py
src/tikorgzo/cli/functions/: __init__.py  args_validator.py  generic.py
src/tikorgzo/config/: constants.py  mapper.py  model.py  parser.py  provider.py  validator.py
src/tikorgzo/core/: browser.py  download_link_extractor.py  downloader.py  extractor.py  functions.py  video_info.py  video_info_processor.py
src/tikorgzo/core/download_manager/: constants.py  downloader.py  queue.py
src/tikorgzo/core/download_manager/strategies/: __init__.py  _base.py  aiohttp.py  requests.py
src/tikorgzo/core/extractors/: base.py  constants.py  context_manager.py
src/tikorgzo/core/extractors/direct/: extractor.py  helpers.py  util.py
src/tikorgzo/core/extractors/tikwm/: browser.py  constants.py  download_link_extractor.py  extractor.py
src/tikorgzo/core/session/: model.py
src/tikorgzo/core/video/: constants.py  helpers.py  model.py  processor.py
tests/: test_config_provider.py  test_config_validator.py
